--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,16 +1,16 @@
 version: 0.2
 env:
   variables:
-    REPOSITORY_URI: "976193256461 .dkr.ecr.us-east-1.amazonaws.com/hello-world"
+    REPOSITORY_URI: "976193256461 .dkr.ecr.ap-south-1.amazonaws.com/hello-world"
     ENV: "prod"
-    PROJECT: "<project_name>"
-    APPLICATION: "<app_name>"
+    PROJECT: "lucky-zebra-wfi57b"
+    APPLICATION: "hello-world"
 phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin <account-id>.dkr.ecr.us-east-1.amazonaws.com
+      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 976193256461.dkr.ecr.ap-south-1.amazonaws.com
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
   build:
     commands:
@@ -23,7 +23,7 @@ phases:
       - echo Pushing the Docker images...
       - docker push $REPOSITORY_URI:$ENV-$APPLICATION-$COMMIT_HASH
       - echo Writing image definitions file...
-      - printf '[{"name":"<container-name>","imageUri":"%s"}]' $REPOSITORY_URI:$ENV-$APPLICATION-$COMMIT_HASH > imagedefinitions.json
+      - printf '[{"name":"hello-world","imageUri":"%s"}]' $REPOSITORY_URI:$ENV-$APPLICATION-$COMMIT_HASH > imagedefinitions.json
       - echo Pushing the Docker completed on `date`
       - echo Deploying  images...
 artifacts:
